# memo

./: .gitignore  CMakeLists.txt  README.md  defaults.pri  memo.pro  resources.qrc
app/: CMakeLists.txt  app.pro  main.cpp
i18n/: memo_ru.ts
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  memo.pro  resources.qrc  src.pro  src.pro.user.5f44fc0
src/common/: Constants.h  Exception.cpp  Exception.h  MessageHandler.h  ZipCompressor.cpp  ZipCompressor.h  common.pro
src/core/: App.cpp  App.h  Application.cpp  Application.h  Constants.h  DatabaseException.cpp  DatabaseException.h  Exception.cpp  Exception.h  Exporter.cpp  Exporter.h  Globals.h  ISettings.h  Id.cpp  Id.h  MessageHandler.h  Model.h  SafeString.cpp  SafeString.h  Settings.cpp  Settings.h  SolidString.cpp  SolidString.h
src/database/: Database.cpp  Database.h  DatabaseException.cpp  DatabaseException.h  Migrater.cpp  Migrater.h  Patcher.cpp  Patcher.h
src/i18n/: memo-ru.qm  memo-ru.ts
src/images/: icon.icns
src/libmemo/: libmemo.pri
src/libmemo/memo/: Constants.h  Exception.cpp  Exception.h  MessageHandler.h  ZipCompressor.cpp  ZipCompressor.h
src/loader/: Loader.cpp  loader.pri  loader.pro  main.cpp
src/loader/app/: app.pro  main.cpp
src/loader/lib/: Loader.cpp  Loader.h  lib.pro
src/memo/: main.cpp  memo.pri  memo.pro
src/memo/app/: app.pro  main.cpp  resources.qrc
src/memo/app/i18n/: memo-ru.qm
src/memo/core/: App.cpp  App.h  Constants.h  Context.cpp  Exception.cpp  Exception.h  SqlException.cpp  SqlException.h
src/memo/database/: Database.cpp  Database.h
src/memo/i18n/: memo-ru.qm  memo-ru.ts
src/memo/lib/: lib.pro
src/memo/lib/core/: Constants.h  Context.cpp  Context.h  DatabaseException.h  SqlException.cpp  SqlException.h
src/memo/lib/database/: Database.cpp  Database.h  Patcher.cpp
src/memo/lib/images/: create_icns.sh  icon.xcf
src/memo/lib/ui/: Editor.cpp  Editor.h  MainWindow.cpp  MainWindow.h  Options.cpp  Options.h
src/memo/lib/ui/hotkey/: GlobalHotkey.cpp  GlobalHotkey.h  NativeEventFilter.h  NativeEventFilterMac.cpp  NativeEventFilterX11.cpp
src/memo/lib/ui/outliner/: NoteProperties.cpp  Outliner.cpp  Outliner.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h
src/memo/lib/updater/: NewUpdates.cpp  NewUpdates.h  UpdateChecker.cpp  UpdateChecker.h  UpdateDownloader.cpp  UpdateDownloader.h
src/memo/ui/: Editor.cpp  Editor.h  MainWindow.cpp  MainWindow.h  Options.cpp  Options.h
src/memo/ui/hotkey/: GlobalHotkey.h
src/memo/ui/outliner/: NoteProperties.h  Outliner.cpp  Outliner.h
src/memo/updater/: NewUpdates.cpp  NewUpdates.h  UpdateChecker.cpp  UpdateChecker.h  UpdateDownloader.cpp  UpdateDownloader.h  manifest.json.example
src/memo/updater/update-creator/: update-creator.pro
src/memolib/: memolib.pri
src/memolib/lib/: Exception.cpp  Exception.h  MessageHandler.h  ZipCompressor.cpp  ZipCompressor.h
src/server/: HttpServer.cpp  HttpServer.h  HttpServerManager.cpp  HttpServerManager.h
src/server/handler/: Handler.cpp  Handler.h  NameHandler.cpp  NameHandler.h  NotesHandler.cpp  NotesHandler.h
src/settings/: FileSettings.cpp  FileSettings.h  Settings.cpp  Settings.h
src/ui/: Birthdays.cpp  Birthdays.h  Editor.cpp  Editor.h  EditorToolBar.cpp  EditorToolBar.h  FindText.cpp  FindText.h  MainWindow.cpp  MainWindow.h  Navigation.cpp  Navigation.h  Options.cpp  Options.h  Outliner.cpp  Outliner.h  Preferences.cpp  Preferences.h  RecentFilesMenu.cpp  RecentFilesMenu.h  TrayIcon.cpp  TrayIcon.h
src/ui/birthdays/: Birthdays.cpp
src/ui/dialog/: BrowseLayout.cpp  BrowseLayout.h  FindAllNotesDialog.cpp  FindAllNotesDialog.h  FindDialog.cpp  FindDialog.h  Preferences.cpp  Preferences.h
src/ui/hotkey/: GlobalHotkey.cpp  GlobalHotkey.h  NativeEventFilter.h  NativeEventFilterMac.cpp  NativeEventFilterWin.cpp  NativeEventFilterX11.cpp
src/ui/notetaking/: NoteProperties.cpp  NoteProperties.h  NoteTaking.cpp  NoteTaking.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h
src/ui/outliner/: NoteProperties.h  Outliner.cpp  Outliner.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h
src/updatecreator/: Builder.cpp  Builder.h  ClearSizeDialog.cpp  Constants.h  Form.cpp  Form.h  ListModel.cpp  ListModel.h  MainWindow.cpp  MainWindow.h  Manifest.cpp  Manifest.h  NetDialog.cpp  NetDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  Outliner.cpp  Outliner.h  ProjectSettings.cpp  ProjectSettings.h  UploadDialog.cpp  UploadDialog.h  main.cpp  updatecreator.pri  updatecreator.pro
src/updatecreator/app/: app.pro  main.cpp
src/updatecreator/lib/: ClearSizeDialog.cpp  ClearSizeDialog.h  Constants.h  Form.cpp  Form.h  MainWindow.cpp  MainWindow.h  NetDialog.cpp  NewProjectDialog.cpp  NewProjectDialog.h  Outliner.cpp  Outliner.h  ProjectSettings.cpp  ProjectSettings.h  lib.pro
src/updater/: NewUpdate.cpp  NewUpdate.h  NewUpdates.cpp  NewUpdates.h  UpdateChecker.cpp  UpdateChecker.h  UpdateDownloader.cpp  UpdateDownloader.h  manifest.json.example  redirector.json
tests/: CMakeLists.txt  tests.pro
tests/common/: TestSettings.cpp  TestSettings.h
tests/libmemo/: Test_ZipCompressor.cpp  libmemo.pro
tests/loader/: TestLoader.cpp  Test_Loader.cpp  loader.pro
tests/memo/: TestUpdateChecker.cpp  Test_UpdateChecker.cpp  memo.pro
tests/preferences/: TestPreferences.cpp
tests/settings/: CMakeLists.txt  MockSettings.h  settings.pro  tst_preferences.cpp  tst_testsettings.cpp
tests/updatecreator/: TestListModel.cpp  Test_ListModel.cpp  updatecreator.pro
